# notifica-backend

./: .env.example  Dockerfile  README.md  pyproject.toml
accounts/: urls.py
accounts/migrations/: 0001_initial.py
accounts/models/: user.py
accounts/serializers/: __init__.py
accounts/views/: __init__.py  register_view.py
apps/accounts/: urls.py
apps/accounts/migrations/: 0002_alter_user_email_alter_user_username.py  0003_usuario_delete_user.py  0004_rename_matricula_usuario_username.py
apps/accounts/models/: __init__.py  usuario.py
apps/accounts/serializers/: __init__.py  credentials_serializer.py  usuario_serializer.py
apps/accounts/views/: __init__.py  register_view.py
apps/carrossel/: apps.py  tests.py  urls.py
apps/carrossel/views/: __init__.py  carrossel_view.py
apps/noticias/: tasks.py  urls.py
apps/noticias/migrations/: 0001_initial.py  0002_rename_data_noticia_publicado_em.py  0003_alter_noticia_publicado_em.py
apps/noticias/models/: __init__.py  noticia.py
apps/noticias/serializers/: __init__.py  noticia_serializer.py
apps/noticias/services/: __init__.py  cloudinary_service.py
apps/noticias/views/: __init__.py  noticia_view.py
apps/postagens/: apps.py  tests.py  urls.py
apps/postagens/migrations/: 0001_initial.py  0002_rename_data_postagem_postado_em.py  0003_rename_postado_em_postagem_publicado_em.py  0004_alter_postagem_publicado_em.py  0005_alter_postagem_publicado_em.py  0008_remove_postagem_cor_fundo_postagem_gradiente_fundo.py
apps/postagens/models/: __init__.py  postagem.py
apps/postagens/serializers/: __init__.py  postagem_input_serializer.py  postagem_output_serializer.py  postagem_serializer.py
apps/postagens/services/: __init__.py  (+1 more)
core/: celery.py  serializers.py  settings.py  urls.py
core/views/: __init__.py  healthcheck.py
scripts/base/: __init__.py  crawler.py
scripts/bots/: __init__.py  cnn.py  g1.py  metropoles.py  uol.py
scripts/services/: __init__.py  embedding_function.py  vector_database.py
(+4 files in other folders)
