[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.apis'

[project]
name = 'notifica'
version = '1.0'

authors = [
    {name = 'Yuri Teixeira', email = 'yuriteixeirac@proton.me'}
]

description = 'Uma RESTful API para suporte no sistema de comunicação do IFRN Campus Ceará-Mirim.'
readme = 'README.md'

requires-python = ">=3.12,<4.0"

dependencies = [
    "django (>=6.0.3,<7.0.0)", 
    "mysqlclient (>=2.2.8,<3.0.0)", 
    "djangorestframework (>=3.17.0,<4.0.0)", 
    "djangorestframework-simplejwt[crypto] (>=5.5.1,<6.0.0)", 
    "requests (>=2.32.5,<3.0.0)", 
    "python-dotenv (>=1.2.2,<2.0.0)", 
    "cloudinary (>=1.44.1,<2.0.0)", 
    "google-genai (>=1.68.0,<2.0.0)", 
    "feedparser (>=6.0.12,<7.0.0)", 
    "beautifulsoup4 (>=4.14.3,<5.0.0)", 
    "django-celery-beat (>=2.9.0,<3.0.0)", 
    "redis (>=7.3.0,<8.0.0)", 
    "drf-spectacular (>=0.29.0,<0.30.0)", 
    "drf-spectacular-sidecar (>=2026.3.1,<2027.0.0)", 
    "chromadb (>=1.5.5,<2.0.0)", 
    "sentence-transformers (>=5.3.0,<6.0.0)", 
    "newspaper3k (>=0.2.8,<0.3.0)"
]